<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_1"
            android:checked="true"
            android:icon="@drawable/ic_launcher"
            android:title="@string/nav1_general" />
        <item
            android:id="@+id/navigation_item_2"
            android:icon="@drawable/ic_launcher"
            android:title="@string/nav2_singer" />
        <item
            android:id="@+id/navigation_item_3"
            android:icon="@drawable/ic_launcher"
            android:title="@string/nav3_hot" />
        <item
            android:id="@+id/navigation_item_4"
            android:icon="@drawable/ic_launcher"
            android:title="@string/nav4_new" />
        <item
            android:id="@+id/navigation_item_5"
            android:icon="@drawable/ic_launcher"
            android:title="@string/nav5_history" />

    </group>
</menu>