<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/APP_COLOR"
    tools:context="com.jim.ktv.ktvcontroller.MainActivity">

    <ImageView
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ktv"
        android:layout_gravity="center_vertical"
        android:focusable="true"
        android:layout_above="@+id/done" />

    <Button
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_weight="1.0"
        android:background="@drawable/btnselector"
        android:text="@string/auto_connect_server"
        android:textColor="@color/color_white"
        android:textSize="15.0sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/manualconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/connect"
        android:layout_weight="1.0"
        android:background="@drawable/btnselector"
        android:text="@string/manual_connect_server"
        android:textColor="@color/color_white"
        android:textSize="15.0sp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/iptext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/manualconnect"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:gravity="center"
        android:hint="@string/keyin_server_ip_hint"
        android:inputType="number"
        android:maxLength="64"
        android:singleLine="true" />

</RelativeLayout>
